--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,9 +79,18 @@ jobs:
             mkdir .tmp/
             mv target/*.lex .tmp/
 
+      - name: Check for file
+        id: changelog_check
+        run: |
+          if grep -q "[${{ env.VERSION }}]" CHANGELOG.md ]];then
+            echo "HAS_VERSION=true" >> $GITHUB_OUTPUT
+          else
+            echo "HAS_VERSION=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Update changelog [unreleased] with latest version
         uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
-        if: env.SNAPSHOT == 'false'
+        if: env.SNAPSHOT == 'false' && steps.changelog_check.outputs.HAS_VERSION == 'false'
         with:
           changelogPath: ./CHANGELOG.md
           tag: v${{ env.VERSION }}
