--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,30 +79,31 @@ jobs:
             mkdir .tmp/
             mv target/*.lex .tmp/
 
-      - name: Check for file
-        id: changelog_check
-        run: |
-          if grep -q "${{ env.VERSION }}" CHANGELOG.md ]];then
-            echo "HAS_VERSION=true" >> $GITHUB_OUTPUT
-          else
-            echo "HAS_VERSION=false" >> $GITHUB_OUTPUT
-          fi
+      # TODO: Re-enable when this bug is fixed: https://github.com/3liz/changelog-release/issues/8
+      # - name: Check for file
+      #   id: changelog_check
+      #   run: |
+      #     if grep -q "${{ env.VERSION }}" CHANGELOG.md ]];then
+      #       echo "HAS_VERSION=true" >> $GITHUB_OUTPUT
+      #     else
+      #       echo "HAS_VERSION=false" >> $GITHUB_OUTPUT
+      #     fi
 
-      - name: Update changelog [unreleased] with latest version
-        uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
-        if: env.SNAPSHOT == 'false' && steps.changelog_check.outputs.HAS_VERSION == 'false'
-        with:
-          changelogPath: ./CHANGELOG.md
-          tag: v${{ env.VERSION }}
+      # - name: Update changelog [unreleased] with latest version
+      #   uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
+      #   if: env.SNAPSHOT == 'false' && steps.changelog_check.outputs.HAS_VERSION == 'false'
+      #   with:
+      #     changelogPath: ./CHANGELOG.md
+      #     tag: v${{ env.VERSION }}
 
-      - name: Commit Changelog To Master
-        uses: EndBug/add-and-commit@v9.1.1
-        if: env.SNAPSHOT == 'false'
-        with:
-          author_name: Github Actions
-          author_email: info@ortussolutions.com
-          message: '📖 DOC: Finalized changelog for v${{ env.VERSION }} - __CI__'
-          add: CHANGELOG.md
+      # - name: Commit Changelog To Master
+      #   uses: EndBug/add-and-commit@v9.1.1
+      #   if: env.SNAPSHOT == 'false'
+      #   with:
+      #     author_name: Github Actions
+      #     author_email: info@ortussolutions.com
+      #     message: '📖 DOC: Finalized changelog for v${{ env.VERSION }} - __CI__'
+      #     add: CHANGELOG.md
 
       - name: Tag Version
         uses: rickstaa/action-create-tag@v1.6.1
@@ -115,11 +116,10 @@ jobs:
 
       - name: Read the changelog
         id: changelog
-        uses: mindsers/changelog-reader-action@v2
+        uses: 3liz/changelog-release@0.2.0
         with:
-          validation_level: warn
-          version: ${{ env.VERSION }}
-          path: ./CHANGELOG.md
+          TAG_NAME: ${{ env.VERSION }}
+          CHANGELOG_FILE: CHANGELOG.md
 
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
@@ -131,7 +131,7 @@ jobs:
           replacesArtifacts: true
           tag: ${{ env.VERSION }}
           name: v${{ env.VERSION }}
-          body: ${{ steps.changelog.outputs.changes }}
+          body: ${{ steps.changelog.outputs.markdown }}
 
       - name: Upload Artifact to S3
         uses: jakejarvis/s3-sync-action@master
