--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="libs/javax.servlet.jar"/>
-	<classpathentry kind="lib" path="libs/org-apache-felix-main-4-2-1.jar"/>
-	<classpathentry kind="lib" path="libs/org-apache-commons-collections-3-2-1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/loader"/>
 	<classpathentry kind="lib" path="libs/lucee.jar"/>
-	<classpathentry kind="lib" path="libs/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="libs/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="libs/javassist-3.9.0.GA.jar"/>
-	<classpathentry kind="lib" path="libs/jta-1.1.0.jar"/>
-	<classpathentry kind="lib" path="libs/xml-apis-1.4.1.jar"/>
-	<classpathentry kind="lib" path="libs/ehcache-2.10.3.jar"/>
 	<classpathentry kind="lib" path="libs/hibernate-3.5.5.0007L.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j.api-1.7.12.jar"/>
+	<classpathentry kind="lib" path="libs/org.lucee.ehcache-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libs/org.apache.commons.collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="libs/org.lucee.antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="libs/org.lucee.dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="libs/org.lucee.javassist-3.9.0.GA.jar"/>
+	<classpathentry kind="lib" path="libs/org.lucee.jta-1.1.0.jar"/>
+	<classpathentry kind="lib" path="libs/org.lucee.xml.apis-1.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
