--- a/.github/workflows/main-5.3.yml
+++ b/.github/workflows/main-5.3.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Ant
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-ant
 
-name: Java CI 6.0
+name: Java CI 5.3
 
 on: [push, pull_request,workflow_dispatch]
 
@@ -10,8 +10,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
-      luceeVersion: light-6.0.0.418-SNAPSHOT
-
+      luceeVersion: light-5.3.10.120
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
