👌 IMPROVE: Set correct JAXB ContextFactory property depending on JRE version
This prevents the following error from showing on JREs 11+:

```
Using non-standard property: javax.xml.bind.context.factory. Property javax.xml.bind.JAXBContextFactory should be used instead.
```

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,8 @@
             <extensions>true</extensions>
             <configuration>
                <instructions>
+                  <Specification-Version>${project.version}</Specification-Version>
+                  <Implementation-Version>${project.version}</Implementation-Version>
                   <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                   <Bundle-Name>${project.artifactId}</Bundle-Name>
                   <Private-Package>com.ortussolutions.hibernate</Private-Package>
