--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_APIDOCS_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
-          SOURCE_DIR: "docs"
+          SOURCE_DIR: "target/apidocs"
           DEST_DIR: "lucee/hibernate-extension/${{ env.VERSION }}/"
 
   gh_release:
