--- a/.github/workflows/main-5.4.yml
+++ b/.github/workflows/main-5.4.yml
@@ -19,6 +19,12 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: Set up MySQL (local)
+      run: |
+        sudo systemctl start mysql
+        mysql -e 'CREATE DATABASE lucee' -uroot -proot
+        mysql -e 'CREATE USER "lucee"@"localhost" IDENTIFIED WITH mysql_native_password BY "lucee";' -uroot -proot
+        mysql -e 'GRANT ALL PRIVILEGES ON lucee.* TO "lucee"@"localhost"' -uroot -proot
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
