--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,12 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+    - name: Set up MySQL (local)
+      run: |
+        sudo systemctl start mysql
+        mysql -e 'CREATE DATABASE lucee' -uroot -proot
+        mysql -e 'CREATE USER "lucee"@"localhost" IDENTIFIED WITH mysql_native_password BY "lucee";' -uroot -proot
+        mysql -e 'GRANT ALL PRIVILEGES ON lucee.* TO "lucee"@"localhost"' -uroot -proot
     - name: Cache Maven packages
       uses: actions/cache@v3
       with:
@@ -54,6 +60,11 @@ jobs:
       env:
         testLabels: orm
         testAdditional: ${{ github.workspace }}/tests
+        MYSQL_SERVER: localhost
+        MYSQL_USERNAME: lucee
+        MYSQL_PASSWORD: lucee
+        MYSQL_PORT: 3306
+        MYSQL_DATABASE: lucee
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: always()
