--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,7 +20,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # Version must exist at https://mvnrepository.com/artifact/org.lucee/lucee
         lucee_version: ["6.0.0.346-BETA"]
         java_version: [ "8", "11", "17" ]
 
@@ -33,43 +32,49 @@ jobs:
         java-version: '${{matrix.java_version}}'
         distribution: 'temurin'
 
-    - name: Cache Maven packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: lucee-script-runner-maven-cache
+    # - name: Cache Maven packages
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: ~/.m2
+    #     key: lucee-script-runner-maven-cache
 
-    - name: Build with Maven
-      run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} package
+    # - name: Build with Maven
+    #   run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} package
 
-    - name: Checkout Lucee
-      uses: actions/checkout@v3
+    - name: Setup Java
+      uses: actions/setup-java@v3.9.0
       with:
-        repository: lucee/lucee
-        path: lucee
+        distribution: "temurin"
+        java-version: "11"
 
-    - name: Cache Lucee files
-      uses: actions/cache@v3
-      with:
-        path: _actions/lucee/script-runner/main/lucee-download-cache
-        key: lucee-downloads-${{matrix.lucee_version}}
-        restore-keys: |
-          lucee-downloads
+    - name: Setup CommandBox CLI
+      uses: Ortus-Solutions/setup-commandbox@main
 
-    - name: Run Lucee Test Suite (testLabels="orm")
-      uses: lucee/script-runner@main
-      with:
-        webroot: ${{ github.workspace }}/lucee/test
-        execute: /bootstrap-tests.cfm
-        luceeVersion: ${{matrix.lucee_version}}
-        extensionDir: ${{ github.workspace }}/target
-      env:
-        testLabels: orm
-        testAdditional: ${{ github.workspace }}/tests
+    - name: Install Dependencies
+      run: |
+        box install
+        box uninstall --system commandbox-dotenv
+
+    - name: Start Application Server
+      run: |
+        box server start cfengine=lucee@${{matrix.lucee_version}} --noSaveSettings --debug
+
+    - name: Build Deploy Package
+      run: |
+        box run-script deploy.local
+        box server restart
+        sleep 10s
+        box server restart
+        sleep 10s
+
+    - name: Run Tests
+      run: |
+        mkdir -p tests/results
+        box testbox run --verbose outputFile=tests/results/test-results outputFormats=json,antjunit
 
     - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v2.7.0
+      uses: EnricoMi/publish-unit-test-result-action@v1
       if: always()
       with:
-        files: ${{ github.workspace }}/lucee/test/reports/junit-test-results-${{matrix.lucee_version}}.xml
-        check_name: "Test Results"
+        files: tests/results/**/*.xml
+        check_name: "${{ env.BRANCH }} Test Results"
