🤖 CI: Add .env file for GHA test config

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -51,6 +51,7 @@ jobs:
 
     - name: Start Application Server
       run: |
+        cp .env.template .env
         box server start cfengine=lucee@${{matrix.lucee_version}} --dryRun --noSaveSettings --debug
 
     - name: Deploy Package
