--- a/.env.template
+++ b/.env.template
@@ -1,28 +1,43 @@
-# For MSSQL testing
+## H2 ##
+H2_CLASS=org.h2.Driver
+H2_DBFILE=./tests/db
+H2_BUNDLENAME=org.lucee.h2
+H2_BUNDLEVERSION=2.1.214.0001L
+
+# MSSQL ##
 # Note: If you change MSSQL values, you'll need to also change them in build/docker/mssql/create.sql
-MSSQL_SERVER=127.0.0.1
+MSSQL_BUNDLENAME=org.lucee.mssql
+MSSQL_BUNDLEVERSION=4.0.2206.100
+MSSQL_CLASS=com.microsoft.sqlserver.jdbc.SQLServerDriver
+MSSQL_HOST=127.0.0.1
 MSSQL_USERNAME=sa
 MSSQL_PASSWORD=hib3rnate_DB
 MSSQL_PORT=2433
 MSSQL_DATABASE=hibernateDB
 
-# Uncomment and edit to test on MYSQL or MariaDB
-MYSQL_SERVER=127.0.0.1
+## MYSQL ##
+MYSQL_BUNDLENAME=com.mysql.cj
+MYSQL_BUNDLEVERSION=8.0.19
+MYSQL_CLASS=com.mysql.cj.jdbc.Driver
+MYSQL_HOST=127.0.0.1
 MYSQL_USERNAME=root
 MYSQL_PASSWORD=mysqlIsTheBomb
 MYSQL_PORT=4306
 MYSQL_DATABASE=hibernateDB
 
 
-# Uncomment and edit to test on Postgres
-POSTGRES_SERVER=127.0.0.1
+## Postgres ##
+POSTGRES_BUNDLENAME=org.postgresql.jdbc
+POSTGRES_BUNDLEVERSION=42.2.20
+POSTGRES_CLASS=org.postgresql.Driver
+POSTGRES_HOST=127.0.0.1
 POSTGRES_USERNAME=hibernate
 POSTGRES_PASSWORD=postgresIsTheBomb
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=hibernateDB
 
 # Uncomment and edit to test on Oracle
-# ORACLE_SERVER=127.0.0.1
+# ORACLE_HOST=127.0.0.1
 # ORACLE_USERNAME=root
 # ORACLE_PASSWORD=oracleIsTheBomb
 # ORACLE_PORT=3306
@@ -30,7 +45,7 @@ POSTGRES_DATABASE=hibernateDB
 
 # For Mongo testing
 # TODO: Re-enable when MongoDB testing is fixed in Lucee 6
-# MONGODB_SERVER=127.0.0.1
+# MONGODB_HOST=127.0.0.1
 # MONGODB_USERNAME=mongoadmin
 # MONGODB_PASSWORD=mongoIsTheBomb
 # MONGODB_PORT=27017
