🤖 TEST: Various test fixes

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 ## H2 ##
 H2_CLASS=org.h2.Driver
-H2_DBFILE=./tests/db
+H2_DBFILE="./tests/db/h2"
 H2_BUNDLENAME=org.lucee.h2
 H2_BUNDLEVERSION=2.1.214.0001L
 
