🤖 TEST: Fix lucee versions in CI

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,11 +21,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # We can run tests against any Lucee version, but we can only compile against Lucee releases available on mvnrepository.com.
         lucee_version: ["5"]
         java_version: [ "8" ] # , "11", "17" # Re-enable after test refactor is complete
         experimental: [ false ]
         include:
-          - lucee_version: "@6-snapshot"
+          - lucee_version: "6-snapshot"
+            java_version: "8"
             experimental: true
 
     steps:
@@ -38,7 +40,9 @@ jobs:
         distribution: "temurin"
 
     - name: Build with Maven
-      run: mvn --batch-mode -f pom.xml -Dlucee.version=${{matrix.lucee_version}} -Djdk.version=${{matrix.java_version}} package
+      # TODO: Build against Lucee versions in case loader ever changes 
+      # `-Dlucee.version=${{matrix.lucee_version}} `
+      run: mvn --batch-mode -f pom.xml -Djdk.version=${{matrix.java_version}} package
 
     - name: Setup CommandBox CLI
       uses: Ortus-Solutions/setup-commandbox@main
