🤖 CI: Fix lucee-light cfengine slug for GHA tests

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Start Application Server
       run: |
         cp .env.template .env
-        box server start cfengine=lucee-lite@${{matrix.lucee_version}} --dryRun --noSaveSettings --debug
+        box server start cfengine=lucee-light@${{matrix.lucee_version}} --dryRun --noSaveSettings --debug
 
     - name: Deploy Package
       run: |
