--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
    <groupId>ortus.extension</groupId>
    <artifactId>orm-extension</artifactId>
-   <version></version>
+   <version>5.4.29.28</version>
    <packaging>bundle</packaging>
 
    <name>Ortus ORM Extension</name>
