--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,10 +3,14 @@ name: Test
 # We are a reusable Workflow only
 on:
   workflow_call:
+    secrets:
+      SLACK_WEBHOOK_URL:
+        required: false
   push:
     branches-ignore:
         - main
         - master
+        - development
   pull_request:
     branches-ignore:
         - main
