--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: tests
     if: "!contains(github.event.head_commit.message, '__CI__')"
     steps:
       - uses: actions/checkout@v3
