--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,7 +103,7 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_DOWNLOADS_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_SECRET }}
-          SOURCE_DIR: "source/images/"
+          SOURCE_DIR: "extension/src/main/cfml/logo.png"
           DEST_DIR: "ortussolutions/lucee-extensions/ortus-orm/"
 
       - name: Setup CommandBox
